Add graph export to the template for instance data.